// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduce route close window on a channel 1`] = `
Object {
  "channelKey": "@status",
  "serverKey": "server1",
}
`;

exports[`reduce route close window on a status 1`] = `
Object {
  "channelKey": "@status",
  "serverKey": "server1",
}
`;

exports[`reduce route close window on a status 2`] = `
Object {
  "channelKey": "@status",
  "serverKey": "server2",
}
`;

exports[`reduce route switch window on a channel 1`] = `
Object {
  "channelKey": "#channel",
  "serverKey": "server1",
}
`;

exports[`reduce route switch window on a status 1`] = `
Object {
  "channelKey": "@status",
  "serverKey": "server1",
}
`;

exports[`reduce route with join receveid when I join a channel myself 1`] = `
Object {
  "channelKey": "#channel",
  "serverKey": "server1",
}
`;

exports[`reduce route with join receveid when an user joins a channel 1`] = `
Object {
  "channelKey": "@status",
  "serverKey": "",
}
`;
